syntax = "proto3";

package barrier;

message Request {
    int64 barrier_game_id = 1;
    int64 knowledge_no = 2;
}

message Response {
    bool result = 1;
}

service BarrierService {
    rpc Skip (Request) returns (Response);
}
